# llm-crime-stories

./: .env-example  .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt  run-local.sh  run.sh  setup.cfg  vectordb.py
data/: 1940s_Hollywood_Film_Noir_Detective_Murder_Mystery.json  Smallville_Clark_Kent_2010.json  dummy.json
environment/: game.py  location.py  main.py
environment/generators/: generator.py  grid_generator.py
src/: main.ipynb  main.py  suspect_gen.ipynb
src/environment/: game.py  game_state.py  grid_visualizer.py  location.py  main.py  player_action.py  player_action_accuse.py  player_action_invalid.py  player_action_move.py  player_action_parser.py  sample_map.py  story_describer.py  storyteller.py  types.py
src/environment/generators/: base.py  generator.py  grid_generator.py  random_generator.py  random_grid_generator.py
src/environment/player/: action_accuse.py  action_invalid.py  action_move.py  action_parser.py  action_result.py
src/llm/: llama.ipynb  llama.py  llm_story_generator.py  story_generator.py
src/llm/chains/: __init__.py  killer_chain.py  rooms_chain.py  suspect_chain.py  victim_chain.py
src/llm/gen_chains/: json_output_parser.py  rooms_chain.py  suspect_chain.py  victim_chain.py  yaml_output_parser.py
src/llm/generation_chains/: killer_chain.py  rooms_chain.py  suspect_chain.py  victim_chain.py
src/llm/marshmallow/schemas/: __init__.py  killer.py  room.py  (+3 more)
src/llm/output_parsers/: base_yaml.py  killer.py  room.py  suspect.py  victim.py
src/story/: storyteller.py  storytelling_context.py  types.py
