[metadata]
name = llm-dungeon-adventures
version = 0.0.1
author = Filip Mihal, Juraj Trappl
author_email = fifomihal@gmail.com, juraj.trappl@proton.me
description = Dungeon text-based game that uses LLM.
long_description = file: README.md
keywords = llm, game, dungeon
license = MIT

[options]
zip_safe = False
python_requires = >=3.10
install_requires =
    transformers
    accelerate
    torch
    bitsandbytes
    ipykernel

[options.extras_require]
tests =
    pytest